--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* General */
+
 html {
   font-family: "Montserrat", sans-serif;
 }
@@ -11,4 +13,55 @@ html {
   margin: 10px;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.scores {
+  display: flex;
+}
+
+.score {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.score h1 {
+    font-weight: 300;
+    font-size: 1.6rem;
+}
+
+.life-bar {
+    width: 80%;
+    height: 20px;
+    border: 1px solid #AAA;
+}
+
+.life-bar .life {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    background-color: green;
+}
+
+.life-bar .life.danger {
+    background-color: #ff0000;
+}
+
+/* Result */
+
+.result {
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.result .win {
+    color: #008000;
+}
+
+.result .lose {
+    color: #ff0000;
 }
