--- a/style.css
+++ b/style.css
@@ -105,3 +105,34 @@ html {
   background-color: #bbb;
   color: #000;
 }
+
+/* Logs */
+
+.logs ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.logs ul li {
+  display: flex;
+  justify-content: center;
+  margin: 4px 0px;
+  padding: 3px 0px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  border-radius: 3px;
+}
+
+.playerCls {
+  background-color: #4253afaa;
+  color: #fff;
+}
+
+.monsterCls {
+  background-color: #e51c23aa;
+  color: #fff;
+}
